Normalize the web app profile directory and desktop file names

This is necessary to allow the shell to guess properly the location of
the desktop file out of the WM_CLASS property in the application window.
Also, append a sha1 checksum to the filenames to avoid collisions.

https://bugzilla.gnome.org/show_bug.cgi?id=658010